# levelang-mcp

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  LICENSE  README.md  fly.toml  pyproject.toml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
src/levelang_mcp/: __init__.py  __main__.py  auth.py  client.py  config.py  formatting.py  logging_config.py  server.py
tests/: conftest.py  sample_data.py  test_auth.py  test_client.py  test_formatting.py  test_lifecycle.py  test_logging_config.py  test_tools.py
